# System-Integration

./: .gitignore  README.md
00._Assignments/02._Data/data_parsing_server/: pyproject.toml
00._Assignments/02._Data/data_parsing_server/app/: main.py
00._Assignments/03a._Data_parsing_server/02._python_server/: main.py  pyproject.toml
00._Assignments/04._Expose/: arguments_for_and_against.md  documentation.md  granular_db.sql  how_to_integrate.md
00._Assignments/04b._Expose/: 04b._Exposee_Documentation.md  04b._How_To_Integrate.md  04b._Integrator_Documentation.md  04b._Research_arguments_for_and_against.md  arguments_for_and_against.md  documentation.md  how_to_integrate.md
00._Assignments/10a._Document_A_Database/: mydatabase_mro_docs.html
00._Assignments/10b._Migrate_From_One_Database_To_Another/: .env.source  .env.target  README.md  docker-compose.yml  package.json
00._Assignments/11a._Auth_Integration/: .env.example  app.js  package.json  research.md
00._Assignments/11b._Integrate_With_Payment/: .env.example  app.js  package.json
00._Assignments/12a._Webhooks/: README.md  README.txt  package.json
01._Introduction/payment-provider-exercise/: paymentiframe.html
01/file formats/: me.csv  me.json  me.xml
01a._Data_parsing/: generateFiles.js  parse_files.py
01a._Data_parsing/myenv/: pyvenv.cfg
02._Data_Formats/: me.text  me.yaml
03._Modules/html_esmodules/: index.html  myModule.js
03._Modules/htmlclassic/: index.js  myModule.js
08._Server-Server/01._node/: app.js  documentation.md  package.json
08._Server-Server/02._python/: main.py  pyproject.toml
09._Environment_Variables/02._python/: main.py  pyproject.toml
10._Date/01._node/: index.js
14._WebSocket/02._python_plain/: client.py  client2.py  pyproject.toml  server.py
17._Database_Migrations/: pgdump.sql
18._CORS/: index.html
19._Multipart_Forms/: index.html
20._Base64_Images/: index.html
21._Audio/: index.html
22._MPEG-DASH/: app.js
23._Embedded_Youtube/: embeddedyoutube.html
25._Github_Webhooks/: webhooks.md
db_migrate/: db.py  pyproject.toml
(+76 files in other folders)
