[project]
name = "db-migrate"
version = "0.1.0"
description = ""
authors = [
    {name = "VictorHanert",email = "vict660m@stud.kea.dk"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymysql (>=1.1.1,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "cryptography (>=44.0.3,<45.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
